force-app/main/default/objects/Study_Unit__c/Study_Unit__c.object-meta.xml
<CustomObject>
    <description>The unit of study offered in an educational institution.</description>
    <label>Study Unit</label>
    <nameField>
        <label>Study Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>