force-app/main/default/objects/Study_Unit__c/fields/Course_Objective__c.field-meta.xml
<CustomField>
    <fullName>Course_Objective__c</fullName>
    <label>Course Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>