force-app/main/default/objects/Study_Unit__c/fields/Course_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Course_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Outcome</label>
    <referenceTo>Course_Outcome__c</referenceTo>
    <relationshipLabel>Study Units</relationshipLabel>
    <relationshipName>Study_Units</relationshipName>
    <type>Lookup</type>
</CustomField>