force-app/main/default/objects/Study_Unit__c/fields/Course_Topic__c.field-meta.xml
<CustomField>
    <fullName>Course_Topic__c</fullName>
    <label>Course Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>