force-app/main/default/objects/Study_Unit__c/fields/Grade_Item_Status_Background_Colours__c.field-meta.xml
<CustomField>
    <fullName>Grade_Item_Status_Background_Colours__c</fullName>
    <description>For highlighting cells in the Grading Wizard when a Status is selected. Store the status picklist value=background hex color #code in semicolon separated value, e.g., Late=#ff0000;Missing=#AF9403;Excused=#c1c1c1</description>
    <inlineHelpText>For highlighting cells in the Grading Wizard when a Status is selected. Store the status picklist value=background hex color #code in semicolon separated value, e.g., Late=#ff0000;Missing=#AF9403;Excused=#c1c1c1</inlineHelpText>
    <label>Grade Item Status Background Colours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>