force-app/main/default/objects/Study_Unit__c/fields/Requirement_Description__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Description__c</fullName>
    <description>Enrollment requirement for the study unit.</description>
    <inlineHelpText>Enrollment requirement for the study unit.</inlineHelpText>
    <label>Requirement Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>