force-app/main/default/objects/Study_Unit__c/fields/Requirement_Logic__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Logic__c</fullName>
    <description>Requirement evaluation condition.</description>
    <inlineHelpText>Requirement evaluation condition e.g., A AND B.</inlineHelpText>
    <label>Requirement Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>