force-app/main/default/objects/Study_Unit__c/fields/Study_Grade_Setting__c.field-meta.xml
<CustomField>
    <fullName>Study_Grade_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Grade Setting</label>
    <referenceTo>Study_Grade_Setting__c</referenceTo>
    <relationshipLabel>Study Units</relationshipLabel>
    <relationshipName>Study_Units</relationshipName>
    <type>Lookup</type>
</CustomField>