force-app/main/default/objects/Study_Unit__c/fields/Study_Unit_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit Version</label>
    <referenceTo>Study_Unit_Version__c</referenceTo>
    <relationshipLabel>Study Units</relationshipLabel>
    <relationshipName>Study_Units</relationshipName>
    <type>Lookup</type>
</CustomField>