force-app/main/default/objects/Study_Unit__c/fields/Text_Colour__c.field-meta.xml
<CustomField>
    <fullName>Text_Colour__c</fullName>
    <description>Text hex colour of events in the calendar view (e.g. #000000)</description>
    <inlineHelpText>Text hex colour of events in the calendar view (e.g. #000000)</inlineHelpText>
    <label>Text Colour</label>
    <length>7</length>
    <type>Text</type>
</CustomField>