force-app/main/default/objects/Study_Unit__c/fields/Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Name__c</fullName>
    <formula>/*{Name}*/Translation_Map__r.Translation_1__r.Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Translated Name</label>
    <type>Text</type>
</CustomField>