force-app/main/default/objects/Study_Unit__c/fields/Unit_Level__c.field-meta.xml
<CustomField>
    <fullName>Unit_Level__c</fullName>
    <label>Unit Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>