force-app/main/default/objects/Study_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Educational_Institution__c</columns>
    <columns>Unit_Code__c</columns>
    <columns>Credits__c</columns>
    <columns>Unit_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>